kubernetes/ingress.yaml
# orgchart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orgchart-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: orgchart.workdomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orgchart-service
                port:
                  number: 80
